--- a/app/index.html
+++ b/app/index.html
@@ -11,15 +11,15 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/featurelist1.css">
+    <link rel="stylesheet" href="http://js.arcgis.com/3.13/esri/css/esri.css">
 
     {{content-for 'head-footer'}}
   </head>
   <body>
+    {{content-for 'amd'}}
+ 
     {{content-for 'body'}}
-
-    <script src="assets/vendor.js"></script>
-    <script src="assets/featurelist1.js"></script>
-
+ 
     {{content-for 'body-footer'}}
   </body>
 </html>
